--- a/beertab/fxml/preloaderstyles.css
+++ b/beertab/fxml/preloaderstyles.css
@@ -1,6 +1,6 @@
 #plbckg {
 
-    -fx-background-image: url("file:///c:/temp/beertab530x362.jpg");
+    -fx-background-image: url("../../media/beertab530x362.jpg");
     -fx-background-repeat: no-repeat;
     -fx-background-position: center;
     -fx-background-size: contain;
