--- a/beertab/fxml/beertab.fxml
+++ b/beertab/fxml/beertab.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane alignment="CENTER" hgap="50.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="560.0" vgap="50.0" stylesheets="@beertab.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="beertab.controllers.BeertabController">
+<GridPane alignment="CENTER" hgap="50.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="560.0" stylesheets="@beertab.css" vgap="50.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="beertab.controllers.BeertabController">
    <columnConstraints>
       <ColumnConstraints maxWidth="9.0" minWidth="0.0" prefWidth="0.0" />
       <ColumnConstraints maxWidth="550.0" minWidth="527.0" prefWidth="527.0" />
@@ -24,7 +24,7 @@
       <RowConstraints />
    </rowConstraints>
    <children>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="630.0" prefWidth="550.0" scaleShape="false" GridPane.columnIndex="1">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="658.0" prefWidth="543.0" scaleShape="false" GridPane.columnIndex="1">
          <children>
             <TableView fx:id="beerTabTable" editable="true" layoutX="10.0" layoutY="390.0" onMousePressed="#addRow" prefHeight="268.0" prefWidth="440.0" AnchorPane.leftAnchor="10.0">
               <columns>
@@ -42,7 +42,7 @@
             <Separator fx:id="ut" layoutX="10.0" layoutY="372.0" prefHeight="13.0" prefWidth="528.0" />
             <Button fx:id="checkout" layoutX="460.0" layoutY="566.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" text="Check Out" wrapText="true" />
             <Slider fx:id="slider" blockIncrement="25.0" layoutX="460.0" layoutY="537.0" onMouseReleased="#deleteRow" prefHeight="14.0" prefWidth="80.0" />
-            <Pane fx:id="pn_top" layoutX="10.0" layoutY="9.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="363.0" prefWidth="528.0" AnchorPane.bottomAnchor="286.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="9.0">
+            <Pane fx:id="pn_top" layoutX="10" layoutY="10" maxHeight="363" maxWidth="528"  minHeight="0" minWidth="0" prefHeight="363.0" prefWidth="528.0">
                <padding>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </padding>
